tables: fix alignment

--- a/tables.css
+++ b/tables.css
@@ -6,8 +6,3 @@
       background-color: var(--background-secondary);
 }
 
-/* cssclass: set dataview vertical align to top
- * instead of text-top (useful for pictures) */
-.dv-td-vert-top .dataview.table-view-table td {
-    vertical-align: top;
-}
